--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
+    "framer-motion": "^11.11.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.30.1",
