--- a/package.json
+++ b/package.json
@@ -68,15 +68,17 @@
     "@tanstack/react-query": "^5.83.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "fft.js": "^4.0.4",
+    "framer-motion": "^11.11.17",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
-    "framer-motion": "^11.11.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.30.1",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "tonal": "^6.4.2",
     "vaul": "^0.9.9"
   },
   "devDependencies": {
