--- a/vercel.json
+++ b/vercel.json
@@ -41,7 +41,7 @@
       "destination": "/api/$1"
     },
     {
-      "source": "/((?!api/).*)",
+      "source": "/(.*)",
       "destination": "/index.html"
     }
   ]
