--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,28 +2,29 @@
 FROM python:3.12-slim
 
 # Install system dependencies
-# ffmpeg is required for audio processing (m4a, mp3, etc.)
-# libsndfile1 is required for librosa/soundfile
 RUN apt-get update && apt-get install -y \
     ffmpeg \
     libsndfile1 \
     && rm -rf /var/lib/apt/lists/*
 
-# Set the working directory in the container
+# Create a user to avoid running as root (required by Hugging Face)
+RUN useradd -m -u 1000 user
+USER user
+ENV PATH="/home/user/.local/bin:$PATH"
+
 WORKDIR /app
 
 # Copy the requirements file into the container
-COPY requirements.txt .
+COPY --chown=user requirements.txt .
 
 # Install any needed packages specified in requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the rest of the backend code
-COPY . .
+COPY --chown=user . .
 
-# Make port 8000 available to the world outside this container
-# Render will override this with its own $PORT
-EXPOSE 8000
+# Hugging Face uses port 7860
+ENV PORT=7860
 
 # Run the application
-CMD ["sh", "-c", "uvicorn main:app --host 0.0.0.0 --port ${PORT:-8000}"]
+CMD ["python", "main.py"]
