--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,3 +10,8 @@ demucs==4.0.1
 torch>=2.0.0
 scikit-learn>=1.3.0
 scipy>=1.11.0
+
+# Optional: madmom for fast chord detection (~10x faster than librosa)
+# Requires compilation on Windows (Microsoft Visual C++ 14.0 Build Tools)
+# Works out of the box on Linux (Hugging Face Spaces)
+madmom>=0.16.1
