Fix madmom build: Install Cython in separate step before requirements.txt

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -17,6 +17,9 @@ WORKDIR /app
 # Copy the requirements file into the container
 COPY --chown=user requirements.txt .
 
+# Install Cython first (required to build madmom)
+RUN pip install --no-cache-dir Cython>=0.25
+
 # Install any needed packages specified in requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
