--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,5 @@
-# Use an official Python runtime as a parent image
-FROM python:3.12-slim
+# Use Python 3.11 (madmom is not compatible with Python 3.12)
+FROM python:3.11-slim
 
 # Install system dependencies and build tools
 RUN apt-get update && apt-get install -y \
