--- a/vercel.json
+++ b/vercel.json
@@ -40,5 +40,18 @@
       "source": "/(.*)",
       "destination": "/index.html"
     }
+  ],
+  "redirects": [
+    {
+      "source": "/(.*)",
+      "has": [
+        {
+          "type": "host",
+          "value": "guitariz.vercel.app"
+        }
+      ],
+      "destination": "https://guitariz.studio/$1",
+      "permanent": true
+    }
   ]
 }
