--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,6 +10,9 @@ demucs==4.0.1
 torch>=2.0.0
 scikit-learn>=1.3.0
 scipy>=1.11.0
+pytest==8.2.0
+ruff==0.4.4
+httpx==0.27.0
 
 # Note: madmom is installed separately in Dockerfile with --no-build-isolation
 # to use pre-installed Cython and avoid build environment isolation issues
