feat: optimize logo visibility and SEO for chord ai free

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
     "short_name": "Guitariz",
-    "name": "Guitariz - Chord AI, Fretboard & Music Theory Toolkit",
+    "name": "Guitariz - Chord AI Free & Music Theory",
     "icons": [
         {
             "src": "favicon.ico",
