--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "guitariz",
   "description": "Full-stack music learning platform with AI-powered chord detection, vocal isolation, and interactive theory tools.",
-  "version": "1.6.5",
+  "version": "1.7.0",
   "type": "module",
   "private": false,
   "author": "Abhinav Vaidya",
@@ -86,6 +86,7 @@
     "clsx": "^2.1.1",
     "fft.js": "^4.0.4",
     "framer-motion": "^11.11.17",
+    "lenis": "^1.3.17",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
