--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,34 +2,6 @@ name: CI
 
 on:
   push:
-    branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
-
-jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Use Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Lint
-        run: npm run lint
-
-      - name: Run tests
-        run: npm test --if-present
-name: CI
-
-on:
-  push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
@@ -64,11 +36,6 @@ jobs:
       - uses: actions/checkout@v4
       
       - name: Setup Python
-        uses: actions/setup-node@v4 # Wait, this should be setup-python
-        with:
-          node-version: '20' # Error in my plan, fixed below
-      
-      - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.12'
@@ -94,5 +61,5 @@ jobs:
       - name: Test with pytest
         run: |
           cd backend
-          pip install pytest httpx fastapi # ensure these are available if not in requirements
+          pip install pytest httpx fastapi
           pytest
