--- a/public/manifest.json
+++ b/public/manifest.json
@@ -14,20 +14,14 @@
             "type": "image/x-icon"
         },
         {
-            "src": "logo2.png",
+            "src": "logo.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "logo2.png",
+            "src": "logo.png",
             "sizes": "512x512",
             "type": "image/png",
-            "purpose": "any maskable"
-        },
-        {
-            "src": "logo.svg",
-            "sizes": "any",
-            "type": "image/svg+xml",
             "purpose": "any maskable"
         }
     ],
